<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/foodRecovery"
                        android:layout_width="326dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikmedium"
                        android:text="@string/foodRecovery"
                        android:textColor="@color/calNourishText"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/infoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/ic_info_outline_black_24dp" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:hint="@string/yourName"
                        android:textColor="@color/calNourishText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:hint="@string/phone"
                        android:inputType="number|phone"
                        android:textColor="@color/calNourishText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/locationLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneLayout"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubikregular"
                        android:hint="@string/location"
                        android:textColor="@color/calNourishText"
                        tools:hint="@string/location" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dateLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneLayout"
                    android:layout_alignStart="@+id/phoneLayout"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/rubikregular"
                        android:hint="@string/pickUpDate"
                        android:inputType="text|datetime|date"
                        android:textColor="@color/calNourishText" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/betweenTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dateLayout"
                    android:layout_alignStart="@+id/dateLayout"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/rubikregular"
                    android:text="@string/pickUpBetween" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/timeStartLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/betweenTimes"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_toEndOf="@+id/from"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/timeStart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/rubikregular"
                            android:hint="@string/From"
                            android:inputType="text"
                            android:textColor="@color/calNourishText"
                            tools:hint="@string/From" />

                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".16" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/timeEndLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/timeStartLayout"
                        android:layout_marginStart="0dp"
                        android:layout_toEndOf="@+id/to"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/timeEnd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/rubikregular"
                            android:hint="@string/To"
                            android:inputType="text"
                            android:textColor="@color/calNourishText" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/donationLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/timeEndLayout"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/donation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Donation"
                        android:inputType="textMultiLine"
                        android:fontFamily="@font/rubikregular"
                        android:textColor="@color/calNourishText" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/submit"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/donationLayout"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/rubikmedium"
                    android:text="@string/Submit"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu">


            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>